
    AVRO-1248. Avro Tool to dump protocol of a remote RPC Service
    (Gareth Davis via philz)

    AVRO-1229. Add support for booleans to Trevni. (cutting)

    AVRO-1250. Add a command-line tool to concatenate data files.
    (Nick White via cutting)

    AVRO-1243. Java: Add support for bzip2 file compression and
    translate Hadoop job compression options. (Ted Malaska via cutting)

  IMPROVEMENTS

    AVRO-1211. Add MR guide to documentation. (Skye Wanderman-Milne via
    tomwhite)

    AVRO-1221. Java: Fix TestSaslDigestMd5 to pass on IBM JVM.
    (Rodrigo Trujillo via cutting)

    AVRO-1008. Java: Improve support for forcing connection
    handshakes. (jbaldassari & cutting)

    AVRO-970. Java: Make Codec API public. (Rui Pereira via cutting)

    AVRO-1223. Java: Add a static method to generated classes that
    returns its schema, getClassSchema().  (cutting)

    AVRO-1232. Java: Add a toString() method to AvroWrapper so that it
    works with TextOutputFormat.  (Garrett Wu via cutting)

    AVRO-1241. Java: Optimize Trevni string input. (Joseph Adler via cutting)

    AVRO-1198. Java: Improve error message for malformed data. (cutting)

  BUG FIXES

    AVRO-1231. Java: Fix Trevni shredder to work on non-recursive
    schemas with multiple references. (Mark Wagner via cutting)

    AVRO-1230. avro-mapred-1.7.3-hadoop1.jar does not work with
    Hadoop 1. (tomwhite)

    AVRO-1233. Java: Fix InputBuffer's constructor to use the
    specified initial position. (Mark Wagner via cutting)

    AVRO-1227. Java: Large ByteBuffers can corrupt output. (cutting)

    AVRO-1228. Java: Fix Trevni to use default values for missing Avro fields.
    (cutting)

    AVRO-1240. Java: Fix SpecificDatumReader(Class) constructor to use
    correct ClassLoader. (cutting)

    AVRO-1242. Java: Fix AvroTrevniOutputFormat to correctly get file
    metadata from JobConf. (Ted Malaska via cutting)

    AVRO-1220. Java: Fix a deadlock when reading by replacing parser